# e-ovrt_media-plane

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  MEMORIA_DESARROLLO_PLANO_MEDIOS_EOVRT.md  Makefile  PLAN_INICIAL_REPO_PLANO_MEDIOS.md  README.md  pyproject.toml
configs/: README.md  dbe_cr01_cr02_grounding_dino.yaml  dbe_cr01_cr02_mock.yaml  dbe_cr01_cr02_yoloe.yaml
configs/datasets/: bench_v2_test.yaml  bench_v2_val.yaml  chv.yaml  dataset_v1.yaml  demo_v2.yaml  mocs.yaml  video_sample.yaml
configs/models/: mock.yaml
configs/prompts/: cr01_cr02_bench_v2.yaml  (+3 more)
data/: README.md
deploy/: .env.example  README.md  docker-compose.node-a.yml  docker-compose.node-b.yml  docker-compose.yml
docker/: Dockerfile.node-a  Dockerfile.node-b  docker-compose.yml
docs/: README.md  architecture.md  contracts.md  implementation-status.md  usage.md
models/: README.md
scripts/: bootstrap.sh  download_models.sh  probe_rtsp.py  run_grounding_dino_sample.sh  run_yoloe_sample.sh
tests/: test_cli_two_node.py  test_config.py  test_config_deployment.py  test_config_refs.py  test_contracts.py  test_deploy_contract.py  test_detection_normalizer.py  test_edge_imports_without_torch.py  test_evaluate.py  test_gdino_runtime.py  test_jsonl_sink.py  test_model_factory_runtime.py  test_model_input_spec.py  test_network_transport.py  test_normalizer.py  test_oak_d_source.py  test_pipeline_mock.py  test_pipeline_two_threads.py  test_probe_rtsp.py  test_rtsp_source.py  test_run_artifact_writer.py  test_runtime_utils.py  test_serialization.py  test_sources.py  test_traceability.py  test_transport.py  test_transport_compression.py  test_video_file_source.py  test_visualize.py  test_yoloe_runtime.py
(+162 files in other folders)
