[project]
name = "eovrt-media-plane"
version = "0.1.0"
description = "Experimental media plane for E-OVRT-VDP"
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "opencv-python",
    "pydantic",
    "pyyaml",
    "typer",
    "rich",
    "pyzmq",
    "msgpack",
]

[project.optional-dependencies]
edge = []
gpu = [
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "huggingface_hub",
    "ultralytics",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
eovrt-media = "eovrt_media.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
